fix for whatever is setting overflow hidden on-login

--- a/src/app.less
+++ b/src/app.less
@@ -7,12 +7,13 @@ html {
   background-color: black;
   font-size: 16px;
   height: 100%;
+  overflow: visible;
 }
 
 html body {
   height: 100%;
   background-color: #000000;
-  overflow: auto;
+  overflow: visible;
 }
 
 // media queries to change font-size for rem values
